grammar.js
    source_file: $ => $.complete_expression,

    // ; ABNF syntax based on RFC 5234,
    // ;,
    // ; The character encoding for Dhall is UTF-8,
    // ;,
    // ; Some notes on implementing this grammar:,
    // ;,
    // ; First, do not use a lexer to tokenize the file before parsing.  Instead, treat,
    // ; the individual characters of the file as the tokens to feed into the parser.,
    // ; You should not use a lexer because Dhall's grammar supports two features which,
    // ; cannot be correctly supported by a lexer:,
    // ;,
    // ; * String interpolation (i.e. "foo ${Natural/toInteger bar} baz"),
    // ; * Nested block comments (i.e. "{- foo {- bar -} baz -}"),
    // ;,
    // ; Second, this grammar assumes that your parser can backtrack and/or try,
    // ; multiple parses simultaneously.  For example, consider this expression:,
    // ;,
    // ;     List ./MyType,
    // ;,
    // ; A parser might first try to parse the period as the beginning of a field,
    // ; selector, only to realize immediately afterwards that `/MyType` is not a valid,
    // ; name for a field.  A conforming parser must backtrack so that the expression,
    // ; `./MyType` can instead be correctly interpreted as a relative path,
    // ;,
    // ; Third, if there are multiple valid parses then prefer the first parse,
    // ; according to the ordering of alternatives. That is, the order of evaluation,
    // ; of the alternatives is left-to-right.,
    // ;,
    // ; For example, the grammar for single quoted string literals is:,
    // ;,
    // ;     single-quote-continue =,
    // ;           "'''"               single-quote-continue,
    // ;         / "${" complete-expression "}" single-quote-continue,
    // ;         / "''${"              single-quote-continue,
    // ;         / "''",
    // ;         / %x20-10FFFF         single-quote-continue,
    // ;         / tab                 single-quote-continue,
    // ;         / end-of-line         single-quote-continue,
    // ;,
    // ;         single-quote-literal = "''" single-quote-continue,
    // ;,
    // ; ... which permits valid parses for the following code:,
    // ;,
    // ;     "''''''''''''''''",
    // ;,
    // ; If you tried to parse all alternatives then there are at least two valid,
    // ; interpretations for the above code:,
    // ;,
    // ; * A single quoted literal with four escape sequences of the form "'''",
    // ;     * i.e. "''" followed by "'''"  four times in a row followed by "''",
    // ; * Four empty single quoted literals,
    // ;     * i.e. "''''" four times in a row,
    // ;,
    // ; The correct interpretation is the first one because parsing the escape,
    // ; sequence "'''" takes precedence over parsing the termination sequence "''",,
    // ; according to the order of the alternatives in the `single-quote-continue`,
    // ; rule.,
    // ;,
    // ; Some parsing libraries do not backtrack by default but allow the user to,
    // ; selectively backtrack in certain parts of the grammar.  Usually parsing,
    // ; libraries do this to improve efficiency and error messages.  Dhall's grammar,
    // ; takes that into account by minimizing the number of rules that require the,
    // ; parser to backtrack and comments below will highlight where you need to,
    // ; explicitly backtrack,
    // ;,
    // ; Specifically, if you see an uninterrupted literal in a grammar rule such as:,
    // ;,
    // ;     "->",
    // ;,
    // ; ... or:,
    // ;,
    // ;     %x66.6F.72.61.6C.6C,
    // ;,
    // ; ... then that string literal is parsed as a single unit, meaning that you,
    // ; should backtrack if you parse only part of the literal,
    // ;,
    // ; In all other cases you can assume that you do not need to backtrack unless,
    // ; there is a comment explicitly asking you to backtrack,
    // ;,
    // ; When parsing a repeated construct, prefer alternatives that parse as many,
    // ; repetitions as possible.  On in other words:,
    // ;,
    // ;     [a] = a / "",
    // ;,
    // ;     a* = a* a / "",
    // ;,
    // ; Note that the latter rule also specifies that repetition produces,
    // ; left-associated expressions.  For example, function application is,
    // ; left-associative and all operators are left-associative when they are not,
    // ; parenthesized.,
    // ;,
    // ; Additionally, try alternatives in an order that minimizes backtracking,
    // ; according to the following rule:,
    // ;,
    // ;     (a / b) (c / d) = a c / a d / b c / b d,
    // ; NOTE: There are many line endings in the wild,
    // ;,
    // ; See: https://en.wikipedia.org/wiki/Newline,
    // ;,
    // ; For simplicity this supports Unix and Windows line-endings, which are the most,
    // ; common,
    _end_of_line: $ =>
      choice("\x0A", "\x0D\x0A"),
    _tab: $ =>
      "\x09",
    _whitespace_chunk: $ =>
      choice(" ", $._tab, $._end_of_line, $.line_comment, $.block_comment),
    _nonempty_whitespace: $ =>
      repeat1($._whitespace_chunk),
    // ; Uppercase or lowercase ASCII letter,
    _ALPHA: $ =>
      choice("A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z",
	     "a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z"),
    // ; ASCII digit,
    _DIGIT: $ =>
      choice("0", "1", "2", "3", "4", "5", "6", "7", "8", "9"),
    _HEXDIG: $ =>
      choice($._DIGIT, "A", "B", "C", "D", "E", "F", "a", "b", "c", "d", "e", "f"),
    // ; A simple label cannot be one of the following reserved names:,
    // ;,
    // ; * Bool,
    // ; * Optional,
    // ; * None,
    // ; * Natural,
    // ; * Integer,
    // ; * Double,
    // ; * Text,
    // ; * List,
    // ; * True,
    // ; * False,
    // ; * NaN,
    // ; * Infinity,
    // ; * Type,
    // ; * Kind,
    // ; * Sort,
    // ; * Natural/fold,
    // ; * Natural/build,
    // ; * Natural/isZero,
    // ; * Natural/even,
    // ; * Natural/odd,
    // ; * Natural/toInteger,
    // ; * Natural/show,
    // ; * Integer/toDouble,
    // ; * Integer/show,
    // ; * Double/show,
    // ; * List/build,
    // ; * List/fold,
    // ; * List/length,
    // ; * List/head,
    // ; * List/last,
    // ; * List/indexed,
    // ; * List/reverse,
    // ; * Optional/fold,
    // ; * Optional/build,
    // ; * Text/show,
    // ; * if,
    // ; * then,
    // ; * else,
    // ; * let,
    // ; * in,
    // ; * as,
    // ; * using,
    // ; * merge,
    // ; * Some,
    simple_label: $ =>
      seq(choice($._ALPHA, "_"), repeat(choice($._ALPHA, $._DIGIT, "-", "/", "_"))),
    quoted_label: $ =>
      repeat1(choice($._ALPHA, $._DIGIT, "-", "/", "_", ":", ".", "$")),
    // ; NOTE: Dhall does not support Unicode labels, mainly to minimize the potential,
    // ; for code obfuscation,
    label: $ =>
      seq(choice(seq("`", $.quoted_label, "`"), $.simple_label), whitespace($)),
    // ; Dhall's double-quoted strings are equivalent to JSON strings except with,
    // ; support for string interpolation (and escaping string interpolation),
    // ;,
    // ; Dhall uses almost the same escaping rules as JSON (RFC7159) with one,
    // ; exception: Dhall adds a new `\$` escape sequence for dollar signs.  This,
    // ; additional escape sequences lets you escape string interpolation by writing,
    // ; `\${`,
    // ;,
    // ; > The representation of strings is similar to conventions used in the C,
    // ; > family of programming languages.  A string begins and ends with,
    // ; > quotation marks.  All Unicode characters may be placed within the,
    // ; > quotation marks, except for the characters that must be escaped:,
    // ; > quotation mark, reverse solidus, and the control characters (U+0000,
    // ; > through U+001F).,
    // ; >,
    // ; > Any character may be escaped.  If the character is in the Basic,
    // ; > Multilingual Plane (U+0000 through U+FFFF), then it may be,
    // ; > represented as a six-character sequence: a reverse solidus, followed,
    // ; > by the lowercase letter u, followed by four hexadecimal digits that,
    // ; > encode the character's code point.  The hexadecimal letters A though,
    // ; > F can be upper or lower case.  So, for example, a string containing,
    // ; > only a single reverse solidus character may be represented as,
    // ; > "\u005C".,
    // ; >,
    // ; > Alternatively, there are two-character sequence escape,
    // ; > representations of some popular characters.  So, for example, a,
    // ; > string containing only a single reverse solidus character may be,
    // ; > represented more compactly as "\\".,
    // ; >,
    // ; > To escape an extended character that is not in the Basic Multilingual,
    // ; > Plane, the character is represented as a 12-character sequence,,
    // ; > encoding the UTF-16 surrogate pair.  So, for example, a string,
    // ; > containing only the G clef character (U+1D11E) may be represented as,
    // ; > "\uD834\uDD1E".,
    double_quote_chunk: $ =>
      choice(seq("${", $.complete_expression, "}"), seq("\x5C", choice("\x22", "\x24", "\x5C", "\x2F", "\x62", "\x66", "\x6E", "\x72", "\x74", seq("\x75", seq($._HEXDIG, $._HEXDIG, $._HEXDIG, $._HEXDIG)))), /[\x20-\x21]/, /[\x23-\x5B]/, /[\x5D-\uD7FF]/),
    double_quote_literal: $ =>
      seq("\x22", repeat($.double_quote_chunk), "\x22"),
    // ; NOTE: The only way to end a single-quote string literal with a single quote is,
    // ; to either interpolate the single quote, like this:,
    // ;,
    // ;     ''ABC${"'"}'',
    // ;,
    // ; ... or concatenate another string, like this:,
    // ;,
    // ;     ''ABC'' ++ "'",
    // ;,
    // ; If you try to end the string literal with a single quote then you get "'''",,
    // ; which is interpreted as an escaped pair of single quotes,
    single_quote_continue: $ =>
      choice(seq("'''", $.single_quote_continue), seq("${", $.complete_expression, "}", $.single_quote_continue), seq("''${", $.single_quote_continue), "''", seq(/[\u0020-\uD7FF]/, $.single_quote_continue), seq($._tab, $.single_quote_continue), seq($._end_of_line, $.single_quote_continue)),
    single_quote_literal: $ =>
      seq("''", $._end_of_line, $.single_quote_continue),
    text_literal: $ =>
      seq(choice($.double_quote_literal, $.single_quote_literal), whitespace($)),
    // ; RFC 5234 interprets string literals as case-insensitive and recommends using,
    // ; hex instead for case-sensitive strings,
    // ;,
    // ; If you don't feel like reading hex, these are all the same as the rule name,,
    // ; except without the '-raw' ending, and converting dashes in the rule name,
    // ; to forward slashes,
    reserved_raw: $ =>
      choice($.Bool_raw, $.Optional_raw, $.None_raw, $.Natural_raw, $.Integer_raw, $.Double_raw, $.Text_raw, $.List_raw, $.True_raw, $.False_raw, $.NaN_raw, $.Infinity_raw, $.Type_raw, $.Kind_raw, $.Sort_raw),
    reserved_namespaced_raw: $ =>
      choice($.Natural_fold_raw, $.Natural_build_raw, $.Natural_isZero_raw, $.Natural_even_raw, $.Natural_odd_raw, $.Natural_toInteger_raw, $.Natural_show_raw, $.Integer_toDouble_raw, $.Integer_show_raw, $.Double_show_raw, $.List_build_raw, $.List_fold_raw, $.List_length_raw, $.List_head_raw, $.List_last_raw, $.List_indexed_raw, $.List_reverse_raw, $.Optional_fold_raw, $.Optional_build_raw, $.Text_show_raw),
    reserved: $ =>
      seq($.reserved_raw, whitespace($)),
    reserved_namespaced: $ =>
      seq($.reserved_namespaced_raw, whitespace($)),
    // ; Whitespaced rules for reserved words, to be used when matching expressions,
    equal: $ =>
      seq("=", whitespace($)),
    open_brace: $ =>
      seq("{", whitespace($)),
    close_brace: $ =>
      seq("}", whitespace($)),
    open_bracket: $ =>
      seq("[", whitespace($)),
    close_bracket: $ =>
      seq("]", whitespace($)),
    open_angle: $ =>
      seq("<", whitespace($)),
    close_angle: $ =>
      seq(">", whitespace($)),
    bar: $ =>
      seq("|", whitespace($)),
    comma: $ =>
      seq(",", whitespace($)),
    open_parens: $ =>
      seq("(", whitespace($)),
    close_parens: $ =>
      seq(")", whitespace($)),
    at: $ =>
      seq("@", whitespace($)),
    colon: $ =>
      seq(":", $._nonempty_whitespace),
    exponent: $ =>
      seq("e", optional(choice("+", "-")), repeat1($._DIGIT)),
    double_literal: $ =>
      seq(optional(choice("+", "-")), repeat1($._DIGIT), choice(seq(".", repeat1($._DIGIT), optional($.exponent)), $.exponent), whitespace($)),
    natural_literal_raw: $ =>
      repeat1($._DIGIT),
    integer_literal: $ =>
      seq(choice("+", "-"), $.natural_literal_raw, whitespace($)),
    natural_literal: $ =>
      seq($.natural_literal_raw, whitespace($)),
    identifier: $ =>
      seq($.label, optional(seq($.at, $.natural_literal_raw, whitespace($)))),
    identifier_reserved_prefix: $ =>
      seq($.reserved_raw, repeat1(choice($._ALPHA, $._DIGIT, "-", "/", "_")), whitespace($), optional(seq($.at, $.natural_literal_raw, whitespace($)))),
    expression: $ =>
      choice(seq($.lambda, $.open_parens, $.label, $.colon, $.expression, $.close_parens, $.arrow, $.expression), seq($.if, $.expression, $.then, $.expression, $.else, $.expression), seq(repeat1(seq($.let, $.label, optional(seq($.colon, $.expression)), $.equal, $.expression)), $.in, $.expression), seq($.forall, $.open_parens, $.label, $.colon, $.expression, $.close_parens, $.arrow, $.expression), seq($.operator_expression, $.arrow, $.expression), $.annotated_expression),
    annotated_expression: $ =>
      choice(seq($.merge, $.import_expression, $.import_expression, optional(seq($.colon, $.application_expression))), seq($.open_bracket, choice($.empty_collection, $.non_empty_optional)), seq($.operator_expression, optional(seq($.colon, $.expression)))),
    operator_expression: $ =>
      $.import_alt_expression,
    import_alt_expression: $ =>
      seq($.or_expression, repeat(seq($.import_alt, $.or_expression))),
    or_expression: $ =>
      seq($.plus_expression, repeat(seq($.or, $.plus_expression))),
    plus_expression: $ =>
      seq($.text_append_expression, repeat(seq($.plus, $.text_append_expression))),
    text_append_expression: $ =>
      seq($.list_append_expression, repeat(seq($.text_append, $.list_append_expression))),
    list_append_expression: $ =>
      seq($.and_expression, repeat(seq($.list_append, $.and_expression))),
    and_expression: $ =>
      seq($.combine_expression, repeat(seq($.and, $.combine_expression))),
    combine_expression: $ =>
      seq($.prefer_expression, repeat(seq($.combine, $.prefer_expression))),
    prefer_expression: $ =>
      seq($.combine_types_expression, repeat(seq($.prefer, $.combine_types_expression))),
    combine_types_expression: $ =>
      seq($.times_expression, repeat(seq($.combine_types, $.times_expression))),
    times_expression: $ =>
      seq($.equal_expression, repeat(seq($.times, $.equal_expression))),
    equal_expression: $ =>
      seq($.not_equal_expression, repeat(seq($.double_equal, $.not_equal_expression))),
    not_equal_expression: $ =>
      seq($.application_expression, repeat(seq($.not_equal, $.application_expression))),
    // ; Import expressions need to be separated by some whitespace, otherwise there,
    // ; would be ambiguity: `./ab` could be interpreted as "import the file `./ab`",,
    // ; or "apply the import `./a` to label `b`",
    application_expression: $ =>
      prec.left(seq(optional($.Some), $.import_expression, repeat(seq($._whitespace_chunk, $.import_expression)))),
    non_empty_record_type_or_literal: $ =>
      seq($.label, choice($.non_empty_record_literal, $.non_empty_record_type)),
    non_empty_record_type: $ =>
      seq($.colon, $.expression, repeat(seq($.comma, $.label, $.colon, $.expression))),
    complete_expression: $ =>
      seq(whitespace($), $.expression)
    
  }
});
